--- a/.github/workflows/decrypt_gpg.yml
+++ b/.github/workflows/decrypt_gpg.yml
@@ -8,7 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Decrypt password.json
-        run: ./.github/decrypt_password.sh
+        run: ./.github/script/decrypt_password.sh
         env:
           LARGE_SECRET_PASSPHRASE: ${{ secrets.pgp_passphrase }}
       # This command is just an example to show your secret being printed
